# timegrid

./: .env  .env.example  ALL_PHASES_COMPLETE.md  API_SETUP.md  ARCHITECTURE_PROPOSAL.md  DATABASE_SETUP.md  FEATURE_TOGGLES_GUIDE.md  FILESYSTEM_UPGRADE.md  FIX_404_ERRORS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS_GUIDE.md  MANUAL_DATABASE_SETUP.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  NATIVE_FEATURES.md  OPTIMIZATION_REPORT.md  PER_PROJECT_IMPLEMENTATION.md  PHASE3_COMPLETE.md  PHASE3_GUIDE.md  PHASE_2_COMPLETE.md  POSTGRES_MIGRATION.md  QUICKSTART.md  QUICK_FIX.sh  QUICK_REFERENCE.md  README.md  README_POSTGRES.md  SETUP_DATABASE.md  TEAM_FEATURE_EXPLAINED.md  WHATS_BEEN_BUILT.md  deploy-database.sh  docker-compose.yml  index.html  migrate-imports.sh  package-lock.json  package.json  run-api-migration.sh  run-architecture-migration.sh  run-integrations-migration.sh  (+6 more)
docker/: Dockerfile.frontend  docker-compose.yml  frontend-nginx.conf
docs/: DATA_ISOLATION_FIX.md  DEPLOY.md  DEPLOYMENT_INDEX.md  DESKTOP_DEPLOYMENT.md  MOBILE.md  MOBILE_DEPLOYMENT.md  OFFLINE_FIRST_LOGIN.md  OFFLINE_FIRST_LOGIN_CODE_REFERENCE.md  OFFLINE_FIRST_LOGIN_IMPLEMENTATION.md  OFFLINE_FIRST_LOGIN_INDEX.md  OFFLINE_FIRST_LOGIN_QUICK_START.md  OFFLINE_FIRST_LOGIN_SUMMARY.md  QUICKSTART.md  RATE_LIMIT_FIX.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
migrations/: 01_initial_schema.sql  02_per_project_architecture.sql  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+171 files in other folders)
